bg color of collapse fixed

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -56,7 +56,7 @@
 .description-container {
 	overflow: hidden;
 	height: fit-content;
-	background-color: gray;
+	background-color: rgba(246, 246, 246, 0.45);
 	// div container will appear when opening a collapse
 	animation: heighty 0.6s linear;
 	@keyframes heighty {
